src/Weather.css
.Weather {
  border: 1px solid #dadde1;
  padding: 16px;
  max-width: 600px;
  border-radius: 4px;
  font-family: Arial, Helvetica, sans-serif;
  color: rgb(135, 135, 135);
}
.Weather form {
  margin-bottom: 20px;
}
.Weather h1 {
  color: #878787;
  display: block;
  font-size: 24px;
  font-weight: 100;
  margin: 20px 0 0 0;
  line-height: 29px;
}
.Weather ul {
  margin: 0;
  padding: 0;
}
.Weather canvas {
  margin-right: 5px;
  display: inline-block;
  margin: 5px;
}
.Weather li {
  font-size: 16px;
  font-weight: 100;
  line-height: 19px;
  list-style: none;
}
.Weather .temperature {
  font-weight: bold;
  color: rgb(33, 33, 33);
  font-size: 64px;
  line-height: 64px;
  font-weight: 400px;
}
.Weather .unit {
  color: rgb(33, 33, 33);
  font-size: 16px;
  font-weight: 400;
  line-height: 1;
  position: relative;
  top: -34px;
  margin-left: 0px;
}

.number {
  position: relative;
  left: -4rem;
}

